--- a/css/page our team.css
+++ b/css/page our team.css
@@ -298,6 +298,9 @@ h6 {
   margin-top: 200px;
 }
 @media (max-width: 991.98px) {
+  .card .card-content h2 {
+    font-size: 30px;
+  }
   .content-popup {
     width: 95%;
     height: 85%;
@@ -323,7 +326,12 @@ h6 {
     width: 100%;
     height: 48%;
     border-radius: 0 0 30px 30px;
+    row-gap: 2px;
   }
+  .right-popup .name {
+    font-size: 30px;
+  }
+
   .deskripsi {
     overflow-y: scroll;
   }
