--- a/css/businnes card.css
+++ b/css/businnes card.css
@@ -24,6 +24,12 @@ body {
   justify-content: center;
   align-items: center;
   flex-direction: column;
+  transition: 0.5s ease;
+}
+
+.business-card .slide:hover {
+  box-shadow: 0px 3px 30px rgba(0, 0, 0, 0.4);
+  transform: scale(1.05);
 }
 
 .business-card .slide .image-content {
@@ -49,17 +55,15 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 14px;
 }
 .card-content h1 {
-  font-size: 40px;
-  font-weight: 800;
-  text-align: center;
-  height: 50px;
-  width: 50px;
-  border-radius: 10%;
+  width: 100%;
   background-color: #1e90ff;
+  font-size: 25px;
+  font-weight: 600;
   color: #fff;
+  text-align: center;
+  padding: 10px 0px;
 }
 .card-content p {
   width: 290px;
