--- a/css/footer.css
+++ b/css/footer.css
@@ -350,7 +350,9 @@ body {
   margin-right: 20px;
 }
 
-#footer p {
+#footer p a {
+  text-decoration: none;
+  list-style: none;
   font-size: 18px;
   font-weight: 500;
   text-align: left;
