--- a/css/navbar.css
+++ b/css/navbar.css
@@ -91,7 +91,7 @@ nav .navbar .links li a {
   font-size: 15px;
   font-weight: 500;
 }
-.links li:hover .htmlcss-arrow,
+.links li:hover .aboutus-arrow,
 .links li:hover .js-arrow {
   transform: rotate(180deg);
 }
@@ -117,7 +117,7 @@ nav .navbar .links li .sub-menu {
   display: none;
   z-index: 2;
 }
-nav .navbar .links li:hover .htmlCss-sub-menu,
+nav .navbar .links li:hover .aboutus-sub-menu,
 nav .navbar .links li:hover .js-sub-menu {
   display: block;
 }
@@ -129,14 +129,19 @@ nav .navbar .links li:hover .js-sub-menu {
   color: #fff;
   font-size: 15px;
   font-weight: 500;
+  text-transform: capitalize;
 }
-.navbar .links li .sub-menu .more-arrow {
+.navbar .links li .sub-menu .more-arrow,
+.navbar .links li .sub-menu .more-arrow2,
+.navbar .links li .sub-menu .more-arrow3 {
   line-height: 40px;
 }
-.navbar .links li .htmlCss-more-sub-menu {
+.navbar .links li .aboutus-more-sub-menu {
   /* line-height: 40px; */
 }
-.navbar .links li .sub-menu .more-sub-menu {
+.navbar .links li .sub-menu .more-sub-menu,
+.navbar .links li .sub-menu .more-sub-menu2,
+.navbar .links li .sub-menu .more-sub-menu3 {
   position: absolute;
   top: 0;
   left: 100%;
@@ -144,7 +149,9 @@ nav .navbar .links li:hover .js-sub-menu {
   z-index: 1;
   display: none;
 }
-.links li .sub-menu .more:hover .more-sub-menu {
+.links li .sub-menu .more:hover .more-sub-menu,
+.links li .sub-menu .more:hover .more-sub-menu2,
+.links li .sub-menu .more:hover .more-sub-menu3 {
   display: block;
 }
 
@@ -203,9 +210,9 @@ nav .navbar .links li:hover .js-sub-menu {
 
 /* i */
 
-.buttoninformation__icon img {
-  width: 20px;
-  padding-top: 9px;
+.buttoninformation__icon i {
+  font-size: 18px;
+  padding-top: 10px;
   color: #fff;
 }
 /* search box */
@@ -348,21 +355,27 @@ nav .navbar .links li:hover .js-sub-menu {
   nav .navbar .links li .sub-menu li {
     border-bottom: none;
   }
-  .navbar .links li .sub-menu .more-sub-menu {
+  .navbar .links li .sub-menu .more-sub-menu,
+  .navbar .links li .sub-menu .more-sub-menu2,
+  .navbar .links li .sub-menu .more-sub-menu3 {
     display: none;
     position: relative;
     left: 0;
   }
-  .navbar .links li .sub-menu .more-sub-menu li {
+  .navbar .links li .sub-menu .more-sub-menu li,
+  .navbar .links li .sub-menu .more-sub-menu2 li,
+  .navbar .links li .sub-menu .more-sub-menu3 li {
     display: flex;
     align-items: center;
     justify-content: space-between;
   }
-  .links li:hover .htmlcss-arrow,
+  .links li:hover .aboutus-arrow,
   .links li:hover .js-arrow {
     transform: rotate(0deg);
   }
-  .navbar .links li .sub-menu .more-sub-menu {
+  .navbar .links li .sub-menu .more-sub-menu,
+  .navbar .links li .sub-menu .more-sub-menu2,
+  .navbar .links li .sub-menu .more-sub-menu3 {
     display: none;
   }
   .navbar .links li .sub-menu .more span {
@@ -372,23 +385,29 @@ nav .navbar .links li:hover .js-sub-menu {
     /* justify-content: space-between; */
   }
 
-  .links li .sub-menu .more:hover .more-sub-menu {
+  .links li .sub-menu .more:hover .more-sub-menu,
+  .links li .sub-menu .more:hover .more-sub-menu2,
+  .links li .sub-menu .more:hover .more-sub-menu3 {
     display: none;
   }
-  nav .navbar .links li:hover .htmlCss-sub-menu,
+  nav .navbar .links li:hover .aboutus-sub-menu,
   nav .navbar .links li:hover .js-sub-menu {
     display: none;
   }
-  .navbar .nav-links.show1 .links .htmlCss-sub-menu,
-  .navbar .nav-links.show3 .links .js-sub-menu,
-  .navbar .nav-links.show2 .links .more .more-sub-menu {
+  .navbar .nav-links.show1 .links .aboutus-sub-menu,
+  .navbar .nav-links.show4 .links .js-sub-menu,
+  .navbar .nav-links.show2 .links .more .more-sub-menu,
+  .navbar .nav-links.show3 .links .more .more-sub-menu2,
+  .navbar .nav-links.show5 .links .more .more-sub-menu3 {
     display: block;
   }
-  .navbar .nav-links.show1 .links .htmlcss-arrow,
-  .navbar .nav-links.show3 .links .js-arrow {
+  .navbar .nav-links.show1 .links .aboutus-arrow,
+  .navbar .nav-links.show4 .links .js-arrow {
     transform: rotate(180deg);
   }
-  .navbar .nav-links.show2 .links .more-arrow {
+  .navbar .nav-links.show2 .links .more-arrow,
+  .navbar .nav-links.show3 .links .more-arrow,
+  .navbar .nav-links.show5 .links .more-arrow {
     transform: rotate(90deg);
   }
 }
