--- a/css/client.css
+++ b/css/client.css
@@ -208,9 +208,12 @@ body {
   background-color: #d6d6d6;
 }
 
-@media (max-width: 830px) {
+@media (max-width: 820px) {
   .project-collection .year {
     width: 20%;
+  }
+  .client-galery {
+    height: 400px;
   }
   .project-collection .project {
     width: 80%;
